Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71646

qtattributionsscanner generates broken qdoc output if qt_attribution.json references missing files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.1
    • 5.11, 5.12
    • Build tools: Other
    • None

    Description

      If a license file referenced in a qt_attribution.json is not found, qtattributionsscanner bails out without closing the /*! ... */ documentation comment it started. This results in weird documentation warnings when the resulting file is fed to QDoc, and potentially multiple broken license document pages.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes