qtattributionsscanner: Always close a started documentation block

If a license file referenced in a qt_attribution.json is not found,
qtattributionsscanner must close the comment block before bailing
out.

Task-number: QTBUG-71646
Change-Id: I83ec4a457d0e2523ca70f8e8e1a99185329a46de
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>